Fixed icon white space wrapping bug Also solves google search console errors

--- a/src/assets/stylesheets/scss/components/_icons.scss
+++ b/src/assets/stylesheets/scss/components/_icons.scss
@@ -1,4 +1,5 @@
-[class^='icon-'] {
+.icon-location,
+.icon-home {
     white-space: nowrap;
     &:before {
         content: '';
